# watermark_project

./: CMakeLists.txt  README.md  main.cpp
cmakebuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  WatermarkProject.sln  WatermarkProject.vcxproj  WatermarkProject.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
cmakebuild/WatermarkProject.dir/Debug/: WatermarkProject.exe.recipe
cmakebuild/WatermarkProject.dir/Debug/WatermarkProject.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
cmakebuild/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
cmakebuild/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.read.1.tlog
cmakebuild/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
cmakebuild/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
src/: ImageEditor.cpp  ImageEditor.h
